feat(common): 增加 模组包解压功能 - 新增模组包解压功能，支持解压原始模组包到指定目录 - 优化构建流程，增加 eula.txt 文件生成 - 更新常量池，增加解析名称和提取文件的函数 - 修改版本号为 0.7